--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
     <div class="button">
         <button>
-            <a href="flower.html">Click me</a>
+            <a href="flower.html">Click me to get surprise</a>
         </button>
         
     </div>
